[gd_scene load_steps=9 format=3 uid="uid://bxwc0n8i6vwbs"]

[ext_resource type="Texture2D" uid="uid://pvxgf3opf4uy" path="res://assets/images/enemies/longEnemy.png" id="1"]
[ext_resource type="Script" path="res://scripts/enemies/Long.gd" id="2"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("1")
region = Rect2(0, 0, 1500, 300)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("1")
region = Rect2(0, 300, 1500, 300)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("1")
region = Rect2(0, 600, 1500, 300)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("1")
region = Rect2(0, 900, 1500, 300)

[sub_resource type="SpriteFrames" id="5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="6"]
radius = 57.2629
height = 1323.87

[node name="Long" type="Area2D" groups=["Emeny"]]
position = Vector2(1076, 379)
script = ExtResource("2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("5")
frame_progress = 0.531124

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
rotation = -1.5605
shape = SubResource("6")

[node name="VisibilityNotifier2D2" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.50006, -4)
scale = Vector2(72.95, 5.9)

[connection signal="area_entered" from="." to="." method="_on_Long_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Long_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D2_screen_exited"]
